# deal-desk

./: .env.example  .gitignore  README.md  agent_config.example.yaml  main.py  prompts.py  pyproject.toml  requirements.txt  sample_rfp.md  sample_rfp_escalation.md  streamlit_app.py  verify_setup.py
.streamlit/: config.toml
agents/: coordinator.py  reviewer.py  specialist.py
frontend/: exporters.py  orchestrator.py
