[project]
name = "deal-desk"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "band-sdk[anthropic,langgraph]>=1.0.0",
    "fpdf2>=2.8.7",
    "langchain-openai>=1.3.2",
    "markdown>=3.10.2",
    "python-docx>=1.2.0",
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0.3",
    "streamlit>=1.58.0",
]
